css_Application bugFix dl dt `white-space: nowrap`

--- a/css/Application.scss
+++ b/css/Application.scss
@@ -473,6 +473,7 @@ dl {
 		margin-left: 0;
 		margin-right: 0;
 		line-height: 1.5em;
+		white-space: nowrap
 	}
 	dd {
 		margin-left: 10px;
